src/index.css
/* ... */
/* Boostrap overrides */

h2 {
  font-size: 1.5rem;
  font-weight: 600;
  margin-bottom: 5px;
}

.btn:focus:not(:focus-visible) {
  outline: 0;
  box-shadow: none;
}

.btn-link {
  color: currentColor;
}

.alert-info {
  color: var(--bs-white);
  background-color: var(--bs-gray-800);
  border-color: var(--bs-gray-900);
}
.alert-info a {
  color: inherit;
}

.modal-header {
  background-color: var(--bs-gray-800);
  color: var(--bs-white);
}

.modal-header .btn-close,
:root[data-theme='dark'] .offcanvas-header .btn-close {
  background: transparent
    url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23fff%27%3e%3cpath d=%27M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z%27/%3e%3c/svg%3e')
    center/1em auto no-repeat;
}

.placeholder {
  background-color: var(--bs-gray-400);
}

.tooltip {
  /* allow tooltips in navbar and overlays */
  --bs-tooltip-zindex: 1200;
}

.link-secondary:hover {
  cursor: pointer;
}

/* Wallets Styles */

.wallets a.wallet-name {
  text-decoration: none;
  color: var(--bs-body-color);
}

.wallets a.wallet-name:hover {
  text-decoration: underline;
}

.wallets .btn.btn-outline-dark:not(:hover) {
  border-color: rgba(222, 222, 222, 1);
}
:root[data-theme='dark'] .wallets .btn.btn-outline-dark:not(:hover) {
  border-color: var(--bs-gray-800);
}
/* Alpha Warning */

.warning-hint {
  font-size: 0.8rem;
}

.warning-card-wrapper {
  position: fixed;
  height: 100%;
  width: 100%;
  z-index: 1000;
  background: rgba(0, 0, 0, 0.2);
  backdrop-filter: blur(1px);
}

.warning-card {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 75%;
}

@media only screen and (min-width: 576px) {
  .warning-card {
    width: 50%;
  }
}

@media only screen and (min-width: 992px) {
  .warning-card {
    width: 25%;
  }
}

.btn:disabled:hover {
  cursor: not-allowed;
}

.accordion {
  --bs-accordion-color: var(--bs-black);
  --bs-accordion-active-color: var(--bs-black);
  --bs-accordion-bg: transparent;
  --bs-accordion-active-bg: transparent;
  --bs-accordion-btn-color: var(--bs-black);
  --bs-accordion-btn-icon: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23212529%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e');
  --bs-accordion-btn-active-icon: var(--bs-accordion-btn-icon);
}

/* Theme overrides */
:root[data-theme='dark'] {
  --bs-body-color-rgb: var(--bs-white-rgb);
  --bs-body-color: var(--bs-white);
  --bs-body-bg-rgb: 33, 37, 41;
  --bs-body-bg: var(--bs-gray-900);
  --bs-border-color: var(--bs-gray-800);
  --bs-border-color-translucent: var(--bs-gray-800);
  --bs-black: #000;
  --bs-code-color: var(--bs-gray-300);
  --bs-gray-dark: #16191c;
  --bs-secondary-color: #6c757d;
  --bs-tertiary-bg: var(--bs-gray-900);
}

:root[data-theme='dark'] .accordion {
  --bs-accordion-color: var(--bs-white);
  --bs-accordion-active-color: var(--bs-white);
  --bs-accordion-btn-color: var(--bs-white);
  --bs-accordion-btn-icon: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23fff%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e');
  --bs-accordion-btn-active-icon: var(--bs-accordion-btn-icon);
}

:root[data-theme='dark'] .popover {
  --bs-popover-bg: var(--bs-gray-800);
  --bs-popover-border-color: var(--bs-gray-700);
}

:root[data-theme='dark'] .tooltip {
  --bs-tooltip-color: var(--bs-white);
  --bs-tooltip-bg: var(--bs-black);
}

:root[data-theme='dark'] a.nav-link.active {
  border-color: var(--bs-white) !important;
}

:root[data-theme='dark'] .card {
  background-color: var(--bs-gray-900);
}

:root[data-theme='dark'] .btn:not(.btn-light) {
  --bs-btn-color: var(--bs-white);
}

:root[data-theme='dark'] .btn-dark {
  background-color: var(--bs-gray-800);
  border-color: var(--bs-gray-800);
}

:root[data-theme='dark'] .btn-dark:hover {
  background-color: var(--bs-gray-dark);
  border-color: var(--bs-gray-dark) !important;
}

:root[data-theme='dark'] .btn-outline-dark {
  color: var(--bs-white);
  border-color: var(--bs-gray-800);
}

:root[data-theme='dark'] .btn-outline-dark:hover {
  background-color: var(--bs-gray-dark) !important;
  border-color: var(--bs-gray-dark) !important;
}

:root[data-theme='dark'] .offcanvas {
  background-color: var(--bs-gray-900);
}

:root[data-theme='dark'] .spinner-border {
  border-color: var(--bs-white) !important;
  border-right-color: transparent !important;
}

:root[data-theme='dark'] .modal-content {
  background-color: var(--bs-gray-900);
}

:root[data-theme='dark'] .modal-header .btn-close {
  background-color: var(--bs-gray-900) !important;
}

:root[data-theme='dark'] .form-control {
  color: var(--bs-body-bg);
  background-color: var(--bs-white);
}

:root[data-theme='dark'] .form-control:disabled,
:root[data-theme='dark'] .form-select:disabled,
.form-control[readonly] {
  background-color: var(--bs-gray-500);
}

:root[data-theme='dark'] .form-control:disabled::placeholder {
  color: var(--bs-gray-600);
}

:root[data-theme='dark'] .link-dark {
  color: var(--bs-white) !important;
}

:root[data-theme='dark'] .toast {
  background-color: transparent;
}
:root[data-theme='dark'] .toast-header {
  color: var(--bs-white);
  background-color: var(--bs-gray-800);
  border-color: var(--bs-gray-900);
}

